--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "lottie-ios": "^3.2.3",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-calendars": "^1.1278.0",
+    "react-native-image-crop-picker": "^0.37.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^13.0.0",
     "react-native-safe-area-context": "^3.3.2",
