--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-image-crop-picker": "^0.37.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^13.0.0",
+    "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
     "react-native-sqlite-storage": "^6.0.1",
